[metadata]
name = pysense
summary = pysense detection and classification utilities
description-file =
    README.rst
author = eNovance
author-email = licensing@enovance.com
home-page = http://www.enovance.com/
classifier =
    Topic :: System :: pysense
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    pysense

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = pysense/locale
domain = pysense

[update_catalog]
domain = pysense
output_dir = pysense/locale
input_file = pysense/locale/pysense.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = pysense/locale/pysense.pot

[entry_points]
console_scripts =
    pysense-detect = pysense.detect:main
    pysense-cardiff = pysense.cardiff.cardiff:main
